Make call to init to get csrf token, withCredentials to send token?   Add local proxy for debug server

--- a/angular.json
+++ b/angular.json
@@ -65,7 +65,8 @@
           "options": {
             "browserTarget": "ng-rock:build",
             "host": "::",
-            "publicHost": "triklops"
+            "publicHost": "triklops",
+            "proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
